--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,18 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
             <version>3.0.BETA2_119</version>
+        </dependency>-->
+        <!-- try experimental jda -->
+        <dependency>
+            <groupId>net.dv8tion</groupId>
+            <artifactId>JDA</artifactId>
+            <version>3.0.BETA2_DEV</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/JDA-3.0.BETA2_DEV-withDependencies.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.sedmelluq</groupId>
