--- a/pom.xml
+++ b/pom.xml
@@ -28,18 +28,10 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
-        <!--<dependency>
-            <groupId>net.dv8tion</groupId>
-            <artifactId>JDA</artifactId>
-            <version>3.0.BETA2_119</version>
-        </dependency>-->
-        <!-- try experimental jda -->
         <dependency>
-            <groupId>net.dv8tion</groupId>
+            <groupId>com.github.DV8FromTheWorld</groupId>
             <artifactId>JDA</artifactId>
-            <version>3.0.BETA2_DEV</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/JDA-3.0.BETA2_DEV-withDependencies.jar</systemPath>
+            <version>88a4b9e</version>
         </dependency>
         <dependency>
             <groupId>com.sedmelluq</groupId>
