--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     </properties>
     <repositories>
         <repository>
-            <id>ext</id>
+            <id>kotlin-eap</id>
             <name>kotlin-eap</name>
             <url>http://dl.bintray.com/kotlin/kotlin-eap-1.1</url>
         </repository>
@@ -27,11 +27,23 @@
             <url>https://jitpack.io</url>
         </repository>
     </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>kotlin-eap</id>
+            <name>kotlin-eap</name>
+            <url>http://dl.bintray.com/kotlin/kotlin-eap-1.1</url>
+        </pluginRepository>
+    </pluginRepositories>
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core</artifactId>
+            <version>0.11-rc</version>
         </dependency>
         <dependency>
             <groupId>com.github.DV8FromTheWorld</groupId>
