--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0</version>
     <properties>
         <kotlin.version>1.1.0-rc-91</kotlin.version>
-        <main.class>ovh.not.dabbot.MainKt</main.class>
+        <main.class>org.dabbot.discord.MainKt</main.class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <repositories>
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.sedmelluq</groupId>
             <artifactId>lavaplayer</artifactId>
-            <version>1.2.29</version>
+            <version>1.2.31</version>
         </dependency>
         <dependency>
             <groupId>com.moandjiezana.toml</groupId>
@@ -84,6 +84,16 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>2.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.22</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.JDA-Applications</groupId>
+            <artifactId>Kotlin-JDA</artifactId>
+            <version>233e1b5</version>
         </dependency>
     </dependencies>
     <build>
