--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,14 @@
             <version>c46fcb4</version>
         </dependency>
         <dependency>
+            <groupId>net.dv8tion</groupId>
+            <artifactId>JDA</artifactId>
+            <version>3.0.0_171</version>
+        </dependency>
+        <dependency>
             <groupId>com.sedmelluq</groupId>
             <artifactId>lavaplayer</artifactId>
-            <version>1.2.31</version>
+            <version>1.2.36</version>
         </dependency>
         <dependency>
             <groupId>com.moandjiezana.toml</groupId>
