--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,11 @@
             <artifactId>kotlinx-coroutines-core</artifactId>
             <version>0.11-rc</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.github.DV8FromTheWorld</groupId>
             <artifactId>JDA</artifactId>
             <version>c46fcb4</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
@@ -104,6 +104,11 @@
             <groupId>com.neovisionaries</groupId>
             <artifactId>nv-websocket-client</artifactId>
             <version>1.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
         </dependency>
     </dependencies>
     <build>
